Fixed code sizing on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -444,7 +444,7 @@ iframe {
     font-size: 14px;
   }
 
-  .site-footer .copy, blockquote, .microblog_text p, .microblog_text p a {
+  .site-footer .copy, blockquote, .microblog_text p, .microblog_text p a, code {
     font-size: 20px;
   }
 
